# dia

./: README.md  app.py  cli.py  pyproject.toml
dia/: layers.py  model.py
